crates/balerix-runtime/tests/snapshots/plugin_golden__plugin_deny.snap
---
source: crates/balerix-runtime/tests/plugin_golden.rs
expression: out
---
==== nono-profile.json ====
{
  "environment": {
    "deny_vars": [
      "*"
    ],
    "set_vars": {
      "BALERIX_API_URL": "http://127.0.0.1:7643",
      "BALERIX_PLUGIN_NAME": "web",
      "BALERIX_PLUGIN_SCRATCH": "<root>/state/plugins/web/scratch",
      "BALERIX_PLUGIN_TOKEN": "plugin-token",
      "HOME": "<root>/state/plugins/web/home",
      "MISE_AUTO_INSTALL": "false",
      "MISE_CACHE_DIR": "<root>/state/plugins/web/home/.cache/mise",
      "MISE_CEILING_PATHS": "<root>/data/plugins/web:<root>/state/plugins/web/home",
      "MISE_CONFIG_DIR": "<root>/state/plugins/web/home/.config/mise",
      "MISE_DATA_DIR": "<root>/data/mise",
      "MISE_STATE_DIR": "<root>/state/plugins/web/home/.local/state/mise",
      "TMPDIR": "<root>/state/plugins/web/home/tmp",
      "XDG_CACHE_HOME": "<root>/state/plugins/web/home/.cache",
      "XDG_CONFIG_HOME": "<root>/state/plugins/web/home/.config",
      "XDG_DATA_HOME": "<root>/state/plugins/web/home/.local/share",
      "XDG_STATE_HOME": "<root>/state/plugins/web/home/.local/state"
    }
  },
  "filesystem": {
    "allow": [
      "<root>/state/plugins/web/home",
      "<root>/state/plugins/web/scratch"
    ],
    "read": [
      "/usr",
      "/lib",
      "/lib64",
      "/bin",
      "/etc",
      "<root>/data/mise",
      "<root>/data/plugins/web/0123456789ab",
      "/tools/balerix",
      "/tools/mise"
    ]
  },
  "meta": {
    "description": "generated by balerix for balerix/plugins/web",
    "name": "balerix-balerix-plugins-web"
  },
  "network": {
    "block": true,
    "open_port": [
      7643
    ]
  },
  "platform_overrides": {
    "linux": {
      "security": {
        "signal_mode": "isolated"
      }
    },
    "macos": {
      "security": {
        "signal_mode": "isolated"
      }
    }
  },
  "security": {
    "signal_mode": "isolated"
  },
  "workdir": {
    "access": "none"
  }
}
==== launch.sh ====
#!/bin/sh
# generated by balerix for plugin web — safe to run by hand
cd '<root>/data/plugins/web/0123456789ab' && exec env -i HOME='<root>/state/plugins/web/nono' PATH='/usr/local/bin:/usr/bin:/bin:/tools' \
  '/tools/nono' '-s' '--log-file' '<root>/state/plugins/web/logs/nono.log' 'run' '--profile' '<root>/state/plugins/web/nono-profile.json' '--' '/tools/balerix' 'sandbox-exec' '--' '/tools/mise' 'run' 'serve'
