crates/balerix-runtime/tests/snapshots/plugin_golden__plugin_launch.snap
---
source: crates/balerix-runtime/tests/plugin_golden.rs
expression: launch
---
#!/bin/sh
# generated by balerix for plugin web — safe to run by hand
cd '<root>/data/plugins/web/0123456789ab' && exec env -i HOME='<root>/state/plugins/web/nono' PATH='/usr/local/bin:/usr/bin:/bin:/tools' \
  '/tools/nono' '-s' '--log-file' '<root>/state/plugins/web/logs/nono.log' 'run' '--profile' '<root>/state/plugins/web/nono-profile.json' '--' '/tools/mise' 'run' 'serve'
