crates/balerix-runtime/tests/snapshots/plugin_golden__plugin_profile.snap
---
source: crates/balerix-runtime/tests/plugin_golden.rs
expression: profile
---
{
  "environment": {
    "deny_vars": [
      "*"
    ],
    "set_vars": {
      "BALERIX_API_URL": "http://127.0.0.1:7643",
      "BALERIX_PLUGIN_NAME": "web",
      "BALERIX_PLUGIN_SCRATCH": "<root>/state/plugins/web/scratch",
      "BALERIX_PLUGIN_TOKEN": "plugin-token",
      "HOME": "<root>/state/plugins/web/home",
      "MISE_AUTO_INSTALL": "false",
      "MISE_CACHE_DIR": "<root>/state/plugins/web/home/.cache/mise",
      "MISE_CEILING_PATHS": "<root>/data/plugins/web:<root>/state/plugins/web/home",
      "MISE_CONFIG_DIR": "<root>/state/plugins/web/home/.config/mise",
      "MISE_DATA_DIR": "<root>/data/mise",
      "MISE_STATE_DIR": "<root>/state/plugins/web/home/.local/state/mise",
      "TMPDIR": "<root>/state/plugins/web/home/tmp",
      "XDG_CACHE_HOME": "<root>/state/plugins/web/home/.cache",
      "XDG_CONFIG_HOME": "<root>/state/plugins/web/home/.config",
      "XDG_DATA_HOME": "<root>/state/plugins/web/home/.local/share",
      "XDG_STATE_HOME": "<root>/state/plugins/web/home/.local/state"
    }
  },
  "filesystem": {
    "allow": [
      "<root>/state/plugins/web/home",
      "<root>/state/plugins/web/scratch"
    ],
    "read": [
      "/usr",
      "/lib",
      "/lib64",
      "/bin",
      "/etc",
      "<root>/data/mise",
      "<root>/data/plugins/web/0123456789ab",
      "/tools/balerix",
      "/tools/mise",
      "/opt/data"
    ]
  },
  "meta": {
    "description": "generated by balerix for balerix/plugins/web",
    "name": "balerix-balerix-plugins-web"
  },
  "network": {
    "block": true,
    "open_port": [
      7643
    ]
  },
  "security": {
    "signal_mode": "isolated"
  },
  "workdir": {
    "access": "none"
  }
}
